@@ -1,9 +1,9 @@
 Package: fscaret
 Type: Package
-Title: Automated caret feature selection
-Version: 0.9
-Date: 2014-11-5
-Depends: R (>= 3.0.0), caret, gsubfn, hmeasure, utils, parallel
+Title: Automated Feature Selection from 'caret'
+Version: 0.9.3
+Date: 2015-03-3
+Depends: R (>= 3.1.0), caret, gsubfn, hmeasure, utils, parallel
 Suggests: ada, arm, Boruta, bst, C50, car, caTools, class, Cubist,
         e1071, earth (>= 2.2-3), elasticnet, ellipse, evtree,
         extraTrees, fastICA, foba, gam, gbm (>= 2.1), glmnet (>= 1.8),
@@ -14,16 +14,18 @@ Suggests: ada, arm, Boruta, bst, C50, car, caTools, class, Cubist,
         qrnn, quantregForest, randomForest, RANN, relaxo, rFerns, rocc,
         rpart, rrcov, RRF, rrlda, RSNNS, RWeka (>= 0.4-1), sda,
         sparseLDA (>= 0.1-1), spls, stepPlr, superpc
-Author: Jakub Szlek <j.szlek@uj.edu.pl>, acknowledgments to Aleksander
-        Mendyk, contributions from stackoverflow and
-        r-help@r-project.org mailing list community.
-        Acknowledgments: This work was funded by Poland-Singapore bilateral cooperation
-	project no 2/3/POL-SIN/2012.
+Authors@R: c(
+          person("Jakub","Szlek",email="j.szlek@uj.edu.pl",role=c("aut","cre")),
+          person("Aleksander", "Mendyk",role="ctb"))
 Maintainer: Jakub Szlek <j.szlek@uj.edu.pl>
 License: GPL-2 | GPL-3
 Description: Automated feature selection using variety of models
-        provided by caret package
-Packaged: 2015-01-11 11:35:28 UTC; kuba
+        provided by 'caret' package.
+        This work was funded by Poland-Singapore bilateral cooperation
+        project no 2/3/POL-SIN/2012.
+Packaged: 2015-03-04 13:53:49 UTC; kuba
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-01-11 13:15:37
+Date/Publication: 2015-03-04 16:03:57
+Author: Jakub Szlek [aut, cre],
+  Aleksander Mendyk [ctb]
