@@ -1,43 +1,43 @@
-02636fd3bad742c488701c94b7e9177f *DESCRIPTION
+2b46979e7609459324edc707ef54190e *DESCRIPTION
 b61ae4ce8309caafd182dd03d7df0d7f *NAMESPACE
 6a4372bcb4b3d0e283b6bfd07feaac0b *R/MSE.R
 fad361e51e4e126ae1bd160e26be1003 *R/RMSE.R
-db60cbb9bc4cc41d58ed7a5558a835cc *R/classVarImp.R
+b4c8440aa12ce23fae2d44b8a831f57f *R/classVarImp.R
 63a6644ac64c6cbb8b3e5f7ce1267d1d *R/dataPreprocess.R
-d11ba2cce23ee6545bd73abc942eea4d *R/fscaret.R
+c62885351eea62be1c53ac7e18cf31c4 *R/fscaret.R
 2d6fe3925f5924156cb83de3b51d9a3f *R/funcClass.all.R
 23eacac586077390832615001ccdd3a6 *R/funcReg.all.R
 07dabe45a713e9eb516b69c9b56397d9 *R/impCalc.R
 2afa4ec13630ff492d5f6456f744b3c9 *R/imputeMean.R
 e83d0af82349f78dc4436942258eba0b *R/installPckg.R
-e5b86c96b203af4c3b31721833dbfec9 *R/regVarImp.R
+a3001db774aa72713bb4cdedeba9b96a *R/regVarImp.R
 75bb37c88645180e6c78729e53cc297f *R/requiredPackages.R
-74838300c0e161348e60854d9f1afc2a *R/timeout.R
+80757677902a94b149208bcafade35f3 *R/timeout.R
 c3e6b3e16976da15fc2cfc4a3b868b5a *build/vignette.rds
 fa747f3111587c646da994f25dbfdc5d *data/dataset.test.RData
 0c4b9635e54b833158c8e9695cb05c29 *data/dataset.train.RData
-abdecf7d69b6380eae76db7184de1cfc *data/funcClassPred.RData
-42347ce30f2d84cbacd9f5a8f084d59a *data/funcRegPred.RData
+291cdffc678ba3081e7f8924a67e63c0 *data/funcClassPred.RData
+3b4ce0bb0c3e705116984252b7b0f4b2 *data/funcRegPred.RData
 73a4360a6e7a310dbf1ce90986f2e876 *data/requiredPackages.RData
 a92882a9483305d31da69c7e87077972 *inst/CITATION
-f0cf50696b0ff2775da7ba3768b6a1a5 *inst/NEWS.Rd
-3f500ac319f35c714aee9af6e9d55315 *inst/doc/fscaret.R
-3f5dce6425c6d74c2cb95d5239303a68 *inst/doc/fscaret.Rnw
-df495be095fd1789f5030d893432a0aa *inst/doc/fscaret.pdf
+c2dcc5b13b33ba03e9cfd6161476d995 *inst/NEWS.Rd
+4200b6140641666d11b3be67da325aa5 *inst/doc/fscaret.R
+6cc8294093114359e8e1514390f53542 *inst/doc/fscaret.Rnw
+72d312f29cf64b3f9fc4800d65111da2 *inst/doc/fscaret.pdf
 f760f432af5b2aaa5902ef8e11659ca1 *man/MSE.Rd
 d768fe4bd6b787ec63f0b137c4e31d80 *man/RMSE.Rd
 fddd92fccd7be462c6e7b045fcbb43f3 *man/classVarImp.Rd
 ed5d18925a1e3ca5aea763131aa5a30b *man/dataPreprocess.Rd
 76d760fcbe688794d3e390bbcfe1954a *man/dataset.test.Rd
 3e07c5e6343bfeeb699f163646b784f6 *man/dataset.train.Rd
-0efbbf6d3e34ce90b14ba60ce704537b *man/fscaret-package.Rd
-8a8ab8aea3a1a0aae04272d03639480b *man/fscaret.Rd
+1fd2c837e30e114435569f5db66c9f3d *man/fscaret-package.Rd
+484aacfa73ee88a304ede90e4011d6df *man/fscaret.Rd
 b31402f56ac0528f15e66d036c152008 *man/funcClass.all.Rd
 e19c6b333eb5c191325efedb287b4cfa *man/funcReg.all.Rd
 87ca7a789ff4dabb4b56640e5e9dd413 *man/impCalc.Rd
 5dbf4ece4a03ac37f891cf56684be8d1 *man/imputeMean.Rd
 3ef75a5d12c1a84c1eb450da41232998 *man/installPckg.Rd
-f03410cf2f3cf9b56a50c7dbea4439ab *man/regVarImp.Rd
+d18a085a759d6b37c9b3a9b098d8d82b *man/regVarImp.Rd
 315637019cc8dd12e296363887b7bb91 *man/requiredPackages.Rd
-e2a93466d9ed492a60d8616116d50fa2 *man/timeout.Rd
-3f5dce6425c6d74c2cb95d5239303a68 *vignettes/fscaret.Rnw
+4df39f7a2db6b6eb3a00876f15756fa1 *man/timeout.Rd
+6cc8294093114359e8e1514390f53542 *vignettes/fscaret.Rnw
